<resources>
    <string name="app_name">Uday\'s Pizzeria</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="meat">Meat</string>
    <string name="pizza_type">Pizza type</string>
    <string name="welcome">Welcome to Uday\'s Pizzeria! Create your order below. 10% discount on orders above $80.00.</string>
    <string name="size">Size</string>
    <string name="quantity">Quantity</string>
    <string name="phone_number">Phone number</string>
    <string name="pick_up">Pick-up</string>
    <string name="delivery">Delivery (+ $3.99)</string>
    <string name="delivery_mode">Delivery mode</string>
    <string name="notify">Notify me when my order is ready</string>
    <string name="place_order">Place order</string>
    <string name="order_info">Your order information will be displayed here.</string>
    <string name="quantity_helper_text">Must be between 1 and 10</string>
</resources>