<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleCentered="true" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="20dp"
            android:text="@string/welcome" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pizza_type" />

        <RadioGroup
            android:id="@+id/radioGroupPizzaType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:checkedButton="@+id/radioButtonVegetarian">

            <RadioButton
                android:id="@+id/radioButtonVegetarian"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:enabled="true"
                android:text="@string/vegetarian" />

            <RadioButton
                android:id="@+id/radioButtonMeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:text="@string/meat" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuPizzaSizeLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <AutoCompleteTextView
                android:id="@+id/menuPizzaSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/size"
                android:inputType="none"
                app:simpleItems="@array/pizza_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPizzaQuantityLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:helperText="@string/quantity_helper_text"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPizzaQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantity"
                android:inputType="numberSigned" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPhoneNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/delivery_mode" />

        <RadioGroup
            android:id="@+id/radioGroupDeliveryMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButtonPickup">

            <RadioButton
                android:id="@+id/radioButtonPickup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:enabled="true"
                android:text="@string/pick_up" />

            <RadioButton
                android:id="@+id/radioButtonDelivery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:text="@string/delivery" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkBoxNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:checked="true"
            android:text="@string/notify" />

        <Button
            android:id="@+id/buttonPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:text="@string/place_order" />

        <TextView
            android:id="@+id/textViewOrderInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:text="@string/order_info" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>